Busqueda de scripts por medio de Awake

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ Fisica.cs.meta
 Spawn.cs.meta
 Move.cs.meta
 Find.cs.meta
+Test.meta
+Controlador.cs.meta
+Script1.cs.meta
+Script2.cs.meta
+Script3.cs.meta
